--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <section>
     <div>
       <h1>Intense Mint Dark Chocolate</h1>
-      <h2>85% Cocoa</h2>
+      <strong>85% Cocoa</strong>
       <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
       <a class="btn" href="#">Buy now</a>
       <img class="img-flex" src="images/placeholder-4by3.svg" alt="">
