--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
   <section>
-    <div>
+    <div class="section-body">
       <h1>Intense Mint Dark Chocolate</h1>
-      <strong>85% Cocoa</strong>
+      <strong class="section-sub">85% Cocoa</strong>
       <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
       <a class="btn" href="#">Buy now</a>
+    </div>
+    <div class="section-img">
       <img class="img-flex" src="images/placeholder-4by3.svg" alt="">
     </div>
   </section>
